--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "serve-favicon": "~2.4.5"
-  }
+  },
+  { "engines" : { "node" : ">=12.0" } }
 }
